--- a/projects/coin-ledger.html
+++ b/projects/coin-ledger.html
@@ -117,8 +117,8 @@
       </div>
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
-      <p>They’re people working in tech and in finance. Some of them mined bitcoins the currency’s infancy and watched their value skyrocket. They are interested in strengthening the currency and see it as an investment vehicle. For security they often have their bitcoins spread across many different companies and need to see an aggregated view of their worth.</p>
-      <p>They closely monitor bitcoin's volatility and often check its trading price. They are pioneers in the new currency, bravely wading through market uncertainty and complicated taxes.</p>
+      <p>They’re people working in tech and in finance. Some of them mined bitcoins the currency’s infancy and watched their value skyrocket. They are interested in strengthening the currency and see it as an investment vehicle. For security they often have their bitcoins spread across many different companies and need to see an aggregate view of their total worth.</p>
+      <p>They closely monitor bitcoin's volatility and check its trading price often. They are pioneers in the new currency, wading through market uncertainty and complicated taxes.</p>
     </div>
   </div>
 </div>
@@ -153,7 +153,7 @@
       </div>
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
-      <p>Bitcoin investors using the old site reported that they did not have a clear separation between their portfolio's value and bitcoin's price value. They weren't sure if the site was safe and could be trusted with having access to their sensistive financial information.</p>
+      <p>Bitcoin investors using the old site reported that they did not have a clear separation between their portfolio's value and bitcoin's price value. The old site had a cluttered feel and users were dubious if the site was safe and could be trusted to have access to their sensistive financial information.</p>
     </div>
   </div>
 </div>
