--- a/projects/creativelive.html
+++ b/projects/creativelive.html
@@ -187,7 +187,7 @@
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
       <p>Creative learners are the arty people among us. They are free spirits managing their 9-5 jobs but are dreaming of a life where they do what they love and get paid for it. They are ready to make the leap but aren't sure exactly how to make that happen. </p>
-      <p>They are people who love to learn new things. They are working photographers, musicians, crafters and graphic designers looking to hone thier crafts and grow their business skills.</p>
+      <p>They are people who love to learn new things. They are photographers, musicians, crafters and graphic designers looking to hone thier skills and grow their businesses.</p>
       <p>Creative learners are visual, optimistic people who get bogged down by too many choices and lots of reading. They learn best by being told and shown. They like to learn alongside others and feel part of a community.</p>
     </div>
   </div>
@@ -224,7 +224,7 @@
     <div class="project-item col-sm-3">
       <div class="project-item-top"><img class="img-responsive outline" src="../images/creativelive/15.png"></div>
       <h5>Calendar</h5>
-      <p>A list-style calendar allowed users to easily find upcoming classes of interest</p>
+      <p>A list-style calendar let users easily find upcoming classes of interest</p>
     </div>
     <div class="project-item col-sm-3">
       <div class="project-item-top"><img class="img-responsive outline" src="../images/creativelive/16.png"></div>
@@ -248,7 +248,7 @@
       </div>
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
-      <p>Users of the old site gave the feedback that they had trouble understanding what the company could do for them. They did not know that there was a live class happening right at that time that they could watch for free. They also had trouble comprehending the videos on the class page.</p>
+      <p>Users of the old site said that they had trouble understanding what the company could do for them. They did not know that there was a live class happening then that they could watch for free. They also had trouble comprehending the videos on the class page.</p>
     </div>
   </div>
 </div>
@@ -262,10 +262,10 @@
       </div>
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
-      <p>With the redesign, I started by simplifying the navigation to allow for less user reading. I incorporated imagery of actual productions into the home page that described what Creative Live did, reinforcing the text. Because the majority of Creative Live's audience are females 25-40, I designed the pages to appeal to them, including selecting a complementary font that had a friendly handwriting feel.</p>
+      <p>With the redesign, I started by simplifying the navigation to allow for less reading. I incorporated behind the scenes photos into the home page that showed what Creative Live did, which reinforced the text. Because the majority of Creative Live's audience are females 25-40, I designed the pages to appeal to them and chose a complementary font that had a friendly handwriting feel.</p>
       <img class="img-responsive" src="../images/creativelive/2.png">
 
-      <p>Instead of having one corporate color, I assigned colors to each vertical to allow the user to quickly remember the vertical they were most interested in. I chose colors that worked well together, were readable, and followed their general association. Together they had a &lsquo;tv bar&rsquo; effect.</p>
+      <p>Instead of having one corporate color, I assigned colors to each channel to allow the user to quickly remember the one they were most interested in. I chose colors that worked well together, were readable, and followed their general association. Together they had a &lsquo;tv bar&rsquo; effect.</p>
       <img class="img-responsive" style="border:none" src="../images/creativelive/4.png">
 
       <p>On catalog pages I created a simple filtering mechanism.</p>
