--- a/projects/quantcast.html
+++ b/projects/quantcast.html
@@ -65,7 +65,7 @@
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>compare</h4>
             <hr>
-            <p>One main use of Quantcast for a publisher is competitive analysis. Publishers find competitors in the search box on the dashboard, can save them to their favorites and create comparison charts.  </p>
+            <p>One main use of Quantcast for a publisher is competitive analysis. Publishers could find competitors, save them to their favorites and create comparison charts.  </p>
           </div>
         </div>
 
@@ -110,7 +110,7 @@
       </div>
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
-      <p>Quantcast is a company that provides free analytics to web publishers. Similar to Google Analytics, a publisher inserts code onto their web pages that allows visits to be tracked. They are then provided with analytic reports of demographic and psychographic data which are used to describe their audience to potential partners or advertisers.</p>
+      <p>Quantcast provides free analytics to web publishers. Similar to Google Analytics, a publisher inserts Quantcast code onto their web pages that allows visits to be tracked. They are then provided with analytic reports of demographic and psychographic data which are used to describe their audience to potential partners and advertisers.</p>
       <p>I worked at Quantcast for nearly two years, getting to know web publishers and redesigning Quantcast's measure product to best suit their needs.</p>
     </div>
   </div>
@@ -132,12 +132,12 @@
     <div class="project-item col-sm-3">
       <div class="project-item-top"><img class="img-responsive outline" src="../images/quantcast/9.png"></div>
       <h5>Tools</h5>
-      <p>The product's design was tailored to the publisher's needs.</p>
+      <p>The product's design was tailored to a publisher's needs.</p>
     </div>
     <div class="project-item col-sm-3">
       <div class="project-item-top"><img class="img-responsive outline" src="../images/quantcast/4.png"></div>
       <h5>Analytics</h5>
-      <p>Data visualizations help publishers understand their user base.</p>
+      <p>Data visualizations helped publishers understand their user base.</p>
     </div>
     </div>
 </div>
@@ -151,7 +151,7 @@
       </div>
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
-      <p>Web publishers reported that the design of Quantcast's product was complicated looking. They felt lost in many layers of navigation and felt like they couldn't find their favorite features without having to click several times. They wanted an easier way to use the data provided to back up their story to advertisers and set themselves up for new opportunities.</p>
+      <p>Web publishers reported that the old design of Quantcast's product looked complicated. They felt lost in many layers of navigation and couldn't find their favorite features without having to click several times. They wanted an easier way to use the data given to them to back up their story to advertisers and wanted their public profile to tell a positive story of their business.</p>
     </div>
   </div>
 </div>
@@ -165,13 +165,13 @@
       </div>
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
-      <p>At first it was was unclear how publishers were using Quantcast's product. I partnered with a user researcher and performed in depth interviews with over a dozen publishers using the measure product. We learned that they were most interested in embedding Quantcast charts in reports to advertisers, comparing themselves to their competition, and having a public profile that opens themselves up to new opportunities.</p>
+      <p>At first it was was unclear how publishers were using Quantcast's product. I partnered with a user researcher and we performed in depth interviews with over a dozen publishers using the measure product. We learned that they were most interested in embedding Quantcast charts in reports to advertisers, comparing themselves to their competition, and having a public profile that opens themselves up to new opportunities.</p>
 
 
       <p>I started by simplifying the navigation and created a wrapper that would ease Quantcast into the redesign. I created a home page that was direct and easy to read. After this launched we began the product redesign process.</p>
       <img class="img-responsive" src="../images/quantcast/1.png">
 
-      <p>I redesigned the measure tool to give the publishers quick and easy access to their metrics and an ability to control the presentation of their data in their profile so they could show themselves in the best possible light.</p>
+      <p>I redesigned the measure tool to give the publishers quick and easy access to their metrics and the ability to control the presentation of their data in their profile so they could show themselves in the best possible light.</p>
       <img class="img-responsive" src="../images/quantcast/12.png">
 
       <p>Because comparisons were important, I designed an area where publishers could save favorites, categorize them and create comparison charts.</p>
