--- a/projects/rare-lead.html
+++ b/projects/rare-lead.html
@@ -43,8 +43,8 @@
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>the project</h4>
             <hr>
-            <p>This project was a sketch to test the concept of a &lsquo;Tinder for jobs&rsquo;. The first task was to decide on a name and pull together a logo.</p>
-            <p>The name and logo are designed to evoke trust and hint at exclusivity.</p>
+            <p>This project was a sketch to test the concept of a &lsquo;Tinder for jobs&rsquo;. The first task was to design a logo that inspired trust.</p>
+
           </div>
         </div>
 
