adding theBoardlist to the site

--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
 
 <div class="container container-wide homethumbs">
   <div class="row">
+    <a class="col-sm-4 thumb" href="projects/the-boardlist.html">
+      <div>
+        <span class="thumbimage" style="background-image: url(images/home_theboardlist.png);"></span>
+        <span class="thumbwords">business leaders</span>
+      </div>
+    </a>
     <a class="col-sm-4 thumb" href="projects/coin-ledger.html">
       <div>
         <span class="thumbimage" style="background-image: url(images/home_bitcoin.png);"></span>
@@ -61,12 +67,11 @@
         <span class="thumbwords">passive job seekers</span>
       </div>
     </a>
-    <a class="col-sm-4 thumb" href="projects/bnb-ledger.html">
+    <!--<a class="col-sm-4 thumb" href="projects/bnb-ledger.html">
       <div>
         <span class="thumbimage" style="background-image: url(images/home_bnbledger.png);"></span>
         <span class="thumbwords">airbnb power hosts</span>
-      </div>
-    </a>
+      </div-->
     <a class="col-sm-4 thumb" href="projects/currency-cheat-sheet.html">
       <div>
         <span class="thumbimage" style="background-image: url(images/home_currencycheatsheet.png);"></span>
