title and text updates
added in new title ‘product design leader’ to all pages, updated about
page

--- a/about.html
+++ b/about.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="initial-scale=1.0, user-scalable=yes">
   <link rel="icon" href="images/favicon.png" type="image/png">
   <link rel="apple-touch-icon-precomposed" href="images/favicon.png">
-  <title> Erin Gallup | User Focused Product Design</title>
+  <title> Erin Gallup | Product Design Leader</title>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
   <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -22,8 +22,8 @@
     <div class="col-sm-8 col-xs-12 text-center hometitle">
       <div class="sub-header">
         <h2>
-          <strong>Product</strong>
-          <em>Designer</em>
+          <strong>Product Design</strong>
+          <em>Leader</em>
         </h2>
       </div>
     </div>
@@ -43,13 +43,14 @@
         <li><i class="fa fa-tablet"></i></li>
         <li><i class="fa fa-laptop"></i></li>
         <li><i class="fa fa-desktop"></i></li>
+        <li><i class="fa fa-tv"></i></li>
       </ul>
 
       <span class="small-header">Since</span>
       <em class="em-header">1998</em>
 
       <span class="small-header">Helping</span>
-      <img src="images/logopile.png" class="img-responsive logopile" alt="CreativeLive Quantcast Yahoo! Coin Ledger Rare Lead Bnb Ledger">
+      <img src="images/logopile.png" class="img-responsive logopile" alt="theBoardlist CreativeLive Quantcast Yahoo! Coin Ledger Rare Lead Bnb Ledger">
     </div>
 
     <div class="col-sm-4 right-col text-center">
@@ -65,6 +66,16 @@
         <span class="small-header">Events</span>
         <ul class="list-unstyled">
           <li>
+            9.17.16<br>
+            Instructor<br>
+            <a href="https://generalassemb.ly/education/portfolio-design-how-to-get-noticed/san-francisco" target="_blank">Portfolio Design: How to Get Noticed</a>
+            <span class="location">General Assembly</span></li><br>
+            <!--<li>
+            4.11.16<br>
+            Guest Lecturer<br>
+            Life of a Product Designer: Vis-UX Design<br>
+            <span class="location">General Assembly</span>-->
+            <li>
             6.6.15<br>
             Guest Lecturer<br>
             <a href="https://colorwithlara.wordpress.com" target="_blank">Digital Color Theory: Color &amp; Branding</a><br>
