--- a/projects/joyus.html
+++ b/projects/joyus.html
@@ -26,10 +26,10 @@
 </div>
 
 <div class="photo-container clearfix">
-  <div class="subphoto" style="background-image: url(../images/theboardlist.jpg);"></div>
+  <div class="subphoto" style="background-image: url(../images/joyus.jpg);"></div>
   <div view-slides class="whitecard">
-    <h4>a diversity tool for</h4>
-    <h5>business leaders</h5>
+    <h4>a shopping destination for</h4>
+    <h5>chic busy women</h5>
     <h6>view slides</h6>
   </div>
   <div class="eg-modal">
@@ -147,12 +147,27 @@
     <div class="body-left col-sm-4">
       <div class="body-title">
         <h3>Who are</h3>
-        <h4>business leaders?</h4>
+        <h4>chic busy women?</h4>
       </div>
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
-      <p>They are CEOs, investors and board members of companies who want to fill vacant board seats with female leaders. They want to do this because companies with board diversity tend to have greater performance.<!--<a href="https://theboardlist.com/resources" target="blank">--><!--</a>--></p>
-      <p>Today most board seats are filled through network referrals, which limit the pool of expertise available. Leaders are busy and do not have the time to invest in the research required to find high quality candidates. They need a tool that facilitates discovery.</p>
+      <p>They are working women and mothers. They are between the ages of 30 and 60 and want to stay current with beauty and fashion trends - without needing to devote time to magazines. They do a lot of their shopping online and appreciate curated products.<!--<a href="https://theboardlist.com/resources" target="blank">--><!--</a>--></p>
+      <!--<p>Today most board seats are filled through network referrals, which limit the pool of expertise available. Leaders are busy and do not have the time to invest in the research required to find high quality candidates. They need a tool that facilitates discovery.</p>-->
+    </div>
+  </div>
+</div>
+
+<div class="body-container container">
+  <div class="row">
+    <div class="body-left col-sm-4">
+      <div class="body-title">
+        <h3>About</h3>
+        <h4>the company</h4>
+      </div>
+    </div>
+    <div class="body-right col-sm-7 col-sm-offset-1">
+      <p>Joyus is an online store that sells the products it curates through short engaging videos. These videos are displayed on both Joyus.com and on partner sites like People and Aol through a proprietary player.</p>
+      <!--<p>Joyus provides a revenue stream for media companies who have an audience but must give their content away for free.</p>-->
     </div>
   </div>
 </div>
@@ -161,24 +176,24 @@
   <div class="row">
     <div class="col-sm-12">
       <h4 class="project-title">The Project</h4>
-      <p class="lead">Design a tool to help business leaders find qualified women for their board.</p>
+      <p class="lead">Re-design and re-brand Joyus to appeal to a wide range of busy women.</p>
     </div>
   </div>
   <div class="row project-items match-height distribute">
     <div class="project-item col-sm-3">
       <div class="project-item-top"><img class="img-responsive outline" src="../images/theboardlist/3.png"></div>
-      <h5>Web tool</h5>
-      <p>Makes it easy to refer and find candidates</p>
+      <h5>Website</h5>
+      <p>Provides a clean and elevated environment for shoppers.</p>
     </div>
     <div class="project-item col-sm-3">
       <div class="project-item-top"><img class="img-responsive outline" src="../images/theboardlist/1.png"></div>
-      <h5>Brand</h5>
-      <p>Creates a warm inclusive environment</p>
+      <h5>Player</h5>
+      <p>Allows shoppers to learn about and buy products on sites like People.com</p>
     </div>
     <div class="project-item col-sm-3">
       <div class="project-item-top"><img class="img-responsive outline" src="../images/theboardlist/7.png"></div>
-      <h5>Infographics</h5>
-      <p>Educate and bring awareness.</p>
+      <h5>Style Guide</h5>
+      <p>Defines the Joyus brand for consistency across mediums</p>
     </div>
   </div>
 </div>
