--- a/projects/creativelive.html
+++ b/projects/creativelive.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="initial-scale=1.0, user-scalable=yes">
   <link rel="icon" href="../images/favicon.png" type="image/png">
   <link rel="apple-touch-icon-precomposed" href="../images/favicon.png">
-  <title> Erin Gallup | User Focused Product Design</title>
+  <title> Erin Gallup | Product Design Leader</title>
   <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/jquery.slick/1.5.0/slick.css"/>
